# mlx-fine-tuning-demo

./: .env.example  .gitignore  Modelfile  README.md  pyproject.toml
config/: lora.yaml
data/: labels.json  seed.jsonl
scripts/: 00_check_env.py  01_next_token.py  02_baseline_eval.py  04_synthesize.py  05_judge.py  06_split.py  07_eval.py  08_client.py  08_client_batch.py  08_serve.sh  09_to_ollama.sh  10_to_gguf.sh  classifier.py  common.py
